--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Data Story</title>
+  <title>A Look Back: How Homeownership Trends and Prices of USA Homes Have Evolved</title>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -34,16 +34,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section1">EDIT Section 1</a>
+            <a class="nav-link js-scroll-trigger" href="#section1">Introductuion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section2">EDIT Section 2</a>
+            <a class="nav-link js-scroll-trigger" href="#section2">Findings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section3">EDIT Section 3</a>
+            <a class="nav-link js-scroll-trigger" href="#section3">Obtaining Data</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section4">EDIT Section 4</a>
+            <a class="nav-link js-scroll-trigger" href="#section4">Citations</a>
           </li>
         </ul>
       </div>
@@ -61,7 +61,7 @@
   </header>
 
   <!-- Beginning of Section 1 -->
-  <section id="section1">
+  <section id="Introduction">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -89,7 +89,7 @@
   <!-- End of Section 1 -->
 
   <!-- Beginning of Section 2 -->
-  <section id="section2" class="bg-light">
+  <section id="Findings" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -112,7 +112,7 @@
   <!-- End of Section 2-->
 
   <!-- Beginning of Section 3-->
-  <section id="section3">
+  <section id="Obtaining Data">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -156,7 +156,7 @@
   <!-- End of Section 3 -->
 
   <!-- Beginning of Section 4 -->
-  <section id="section4">
+  <section id="Citations">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
