--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>A Look Back: How Homeownership Trends and Prices of USA Homes Have Evolved</title>
+  <title>Data Story</title>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -53,20 +53,20 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>EDIT TITLE here</h1>
-      <p class="lead">by EDIT NAME(S) here</p>
-      <p class="lead">Last updated on editor CURRENT DATE</p>
+      <h1>A Look Back: How Homeownership Trends and Prices of USA Homes Have Evolved</h1>
+      <p class="lead">by Jana Safy</p>
+      <p class="lead">Last updated on editor Friday, November 11th, 2024</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
 
   <!-- Beginning of Section 1 -->
-  <section id="Introduction">
+  <section id="section1">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 1 label</h2>
+          <h2>Introduction</h2>
 
           <p class="lead">Pull readers into your data story with a compelling introduction. Notice how this paragraph appears in a larger font than others, because the HTML code begins with a "lead" class.</p>
 
@@ -89,12 +89,12 @@
   <!-- End of Section 1 -->
 
   <!-- Beginning of Section 2 -->
-  <section id="Findings" class="bg-light">
+  <section id="section2" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 2 Label</h2>
+          <h2>Findings</h2>
 
           <p>TELL your story and SHOW your evidence. When describing charts, maps, or tables that appear further below, refer to them "...as shown in Figure 1" or "...as shown in Table 1" and include those figure/table numbers in the titles or captions below.</p>
 
@@ -112,12 +112,12 @@
   <!-- End of Section 2-->
 
   <!-- Beginning of Section 3-->
-  <section id="Obtaining Data">
+  <section id="section3">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 3 Label</h2>
+          <h2>Obtaining Data</h2>
 
           <p>Create a separate section to describe how you obtained your data, key steps in your process, and cautions for interpreting its meaning. Write for an audience of future Trinity College students who may wish to replicate your steps. Write in HTML format and always include links to data sources, like this example from <a href='https://data.ct.gov'>CT Open Data</a>. Also link to your shared Google Sheets when appropriate.</p>
 
@@ -156,12 +156,12 @@
   <!-- End of Section 3 -->
 
   <!-- Beginning of Section 4 -->
-  <section id="Citations">
+  <section id="section4">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 4 Label: Advanced Tips</h2>
+          <h2>Citations</h2>
 
           <p>All of your data visualizations should be interactive. But if you need to insert a static image, you can upload a JPG or PNG to the GitHub repo, and insert it using the HTML image tag ("img") that points to a source image ("src") stored in your repo, as shown below:</p>
 
