--- a/index.html
+++ b/index.html
@@ -68,19 +68,18 @@
 
           <h2>Introduction</h2>
 
-          <p class="lead">Pull readers into your data story with a compelling introduction. Notice how this paragraph appears in a larger font than others, because the HTML code begins with a "lead" class.</p>
+          <p class="lead">Owning a home has long symbolized the "American Dream"—a cornerstone of financial stability. Yet, for many, achieving this dream remains a challenge, as housing costs soar, and affordability fluctuates across cities and towns.</p>
 
-          <p>A good introduction raises your guiding question, outlines key findings that answer it, and explains why it matters to both our community partner. Since you also need to provide essential background information for general readers, a typical introduction requires at least 2-3 paragraphs.</p>
-
+          <p>Enter Community Land Trusts (CLTs): Non-profit organizations designed to bridge the gap between housing needs and affordability. CLT’s purchase land and then sells the homes located on the properties to low-income residents. By selling or renting homes—but not the land—CLTs drastically reduce housing costs. To ensure that these properties remain affordable to the CLT’s respective community, residents must agree to a set of terms. The most significant term is that the resident, at the time they wish to sell, must sell the home at a restricted price to keep it affordable. The resident may still realize appreciation from any improvements they made to the home. This way residents are able to grow their personal wealth, while the property continues to benefit local needs.</p>
+          
           <p>Compose your data story in your Google Doc, where it's easier to write and edit, especially when working with other people. When you're ready, create your own copy of this <a href="https://github.com/DataVizForAll/dataviz-story-template">GitHub dataviz-story-template </a>, and publish it online using Settings > Pages. When your version is published, copy and paste the live web link into your README file so you can easily find it.</p>
 
-          <p>In your GitHub copy of this template, open the "index.html" file to see how everything must be written in HTML format. Click the pencil symbol in GithHub to edit the file. HINT: In the upper-right corner, switch the dropdown menu from "No Wrap" to "Soft Wrap" to easily view long segments of code in your screen.</p>
+          <p>For this project, we’re focusing on <a href="https://cljct.org/history-of-homeownership-initiatives/">Urban Suburban Affordables (USA) </a>, a Connecticut-based CLT and a sub-organization of the Hartford Center for Leadership and Justice (HCLJ). HCLJ is a grassroots organization dedicated to advancing social and economic equity across Hartford and its surrounding communities. With a strong focus on empowering historically marginalized populations, they work to address systemic injustices through advocacy, education and community organization. The organization's initiatives span a variety of critical issues, but we will focus on its work on affordable housing in the greater Hartford area.</p>
 
-          <p>Paragraphs like this one must begin with a "p" tag and end with a "p" closing tag.</p>
+          <p>Our aim is to discover USA’s effectiveness in ensuring long-term housing affordability and stability for low-income families. Specifically, whether USA succeeded in maintaining affordable resale prices and availability of single-family homes in its portfolio? By understating the impact of USA on addressing housing affordability, we can provide them with critical insight into their model’s effectiveness. This knowledge could also enable the HCLJ to advocate for policies that expand the program or address barriers to its effectiveness. Ultimately, this work matters because housing isn’t just about shelter, it’s about creating stable foundations for families to thrive. For the HCLJ, ensuring the success and growth of USA is a step toward reducing housing inequality and empowering Hartford’s communities to build a more just and equitable future.</p>
 
           <p>Links must begin and end with "a" anchor tags, with the web address inside either single or double quotes. If you need guidance, check out this <a href='https://www.w3schools.com/html/html_basic.asp'>W3Schools HTML Tutorial</a>.
 
-          <p>Change default navigation labels (such as "Section 1") to customized labels to guide your readers. While some authors use traditional headers (such as "Findings" or "Sources & Methods"), you're welcome to innovate with more creative headers (such as "Why It Matters" or "How We Made This"). Be sure to EDIT names in TWO locations in the template: the Navigation Container (around lines 30-50) and the corresponding Sections labels further below. EDIT only the reader-friendly labels, and do not change the underlying code.</p>
 
         </div>
       </div>
