--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container text-center">
       <h1>A Look Back: How Homeownership Trends and Prices of USA Homes Have Evolved</h1>
       <p class="lead">by Jana Safy</p>
-      <p class="lead">Last updated on editor Friday, November 11th, 2024</p>
+      <p class="lead">Last updated on Friday, November 11th, 2024</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
@@ -91,7 +91,7 @@
 
           <h2>Findings</h2>
 
-          <p>TELL your story and SHOW your evidence. When describing charts, maps, or tables that appear further below, refer to them "...as shown in Figure 1" or "...as shown in Table 1" and include those figure/table numbers in the titles or captions below.</p>
+          <p>Most of the homes in the sample have been owned by three or fewer families since their acquisition by USA. This low turnover rate suggests that USA homes are providing long-term stability for low-income families, which is one of the primary goals of Community Land Trusts.</p>
 
           <p>Embed each of your published visualizations as an HTML iframe code, following instructions in <a href='https://handsondataviz.org/embed.html'>Chapter 9 of HODV</a>, similar to the sample below.</p>
 
