--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 
           <p>Most of the homes in the sample have been owned by three or fewer families since their acquisition by USA. This low turnover rate suggests that USA homes are providing long-term stability for low-income families, which is one of the primary goals of Community Land Trusts.</p>
 
-          <p>Embed each of your published visualizations as an HTML iframe code, following instructions in <a href='https://handsondataviz.org/embed.html'>Chapter 9 of HODV</a>, similar to the sample below.</p>
-
           <iframe title="Percent Change of Home Values in Relationship to Homeownership" aria-label="Map" id="datawrapper-chart-7Xslq" src="https://datawrapper.dwcdn.net/7Xslq/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="869" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
           </script>
 
           <p>Figure 1: Explore the <a href="https://datawrapper.dwcdn.net/7Xslq/1/">interactive chart</a> that shows the percent change of home values from when they were purchased by Urban Suburban Affordables (USA) versus their estimated home value now according to Zillow relative to how many owners the property had since it was acquired by USA.</p>
 
+          <p> While housing prices across the U.S. have soared, USA homes remain much more affordable. The average American home now costs around $400,000, whereas USA homes average approximately $230,000 (Bennefield, 2021).</p>
+          
         </div>
       </div>
     </div>
